# polynomials

./: CMakeLists.txt  Dockerfile  LICENSE  meta.hpp  poly.hpp  test_poly.cpp
